--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
         <title></title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" href="css/style.css" />
-        <link rel="stylesheet" href="css/colorbox.css" />
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAM6PG9zqJ-L5LMHsYH6FuQ6gzN8XumO90"></script>
         <script type="text/javascript" src="scripts/jquery-3.2.1.min.js"></script>
-        <script type="text/javascript" src="scripts/jquery.colorbox-min.js"></script>
         <script type="text/javascript" src="scripts/map.js"></script>
         <script type="text/javascript" src="scripts/scripts.js"></script>
     </head>
@@ -154,7 +152,7 @@
             <div id="map"></div>
         </div>
 
-        <div style='display:none'>
+        <div class="overlay">
             <div class="info-window" id="info_window">
                 <div class="content">
                     <div class="content__image">
